optimizing intro-vector and profile image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="intro-picture">
-          <img src="./images/peter-profile.png" alt="profile picture" />
+          <img src="./images/peter-pic.webp" alt="profile picture" />
         </div>
       </div>
 
