adding moblie phone media queries

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
+    <link rel="icon" href="./images/peter-logo.png">
     <link rel="stylesheet" href="style.css" />
     <title>Portfolio | Peter</title>
   </head>
@@ -14,10 +15,10 @@
     <div id="container">
       <div class="header">
         <div class="logo">
-          <h1>pk</h1>
+          <a href="index.html"><h1 id="name-abr">pk</h1></a>
+          <h1>Portfolio<span>.</span></h1>
         </div>
         <div class="nav-links">
-          <h1>Portfolio<span>.</span></h1>
           <nav>
             <ul>
               <li><a href="#education">Education</a></li>
@@ -34,12 +35,14 @@
       </div>
 
       <div id="toggler">
+        <div id="theme">
+          <button class="color black">Dark</button>
+          <button class="color purple">Light</button>
+        </div>
         <div id="theme-palette">
           <button class="color red"></button>
           <button class="color green"></button>
           <button class="color blue"></button>
-          <button class="color black"></button>
-          <button class="color purple"></button>
         </div>
       </div>
 
@@ -102,6 +105,7 @@
           </div></a
         >
       </div>
+      
       <div class="section-heading">
         <h2>Education & Learning</h2>
       </div>
